color adding with the spinner is finished and working perfectly.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,10 +16,10 @@
             <item>#3F51B5</item>
             <item>#FF5722</item>
             <item>#FFEB3B</item>
-            <item>#000</item>
+            <item>#000000</item>
             <item>#4CAF50</item>
             <item>#673AB7</item>
-            <item>#fff</item>
+            <item>#ffffff</item>
 
         </string-array>
     <!---Scorecard-->
