--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
         <center> How to create a game </center>
         <br/>
 
-        Type in the name of the players and change your colors, afterwards click 'Let's Play'!
+        Type in the name of the players and change your colors, afterwards click Lets Play!
             </string>
 
 
